Avoid line breaks in header content

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -13,6 +13,7 @@ header {
             margin-left: 10px;
         }
         .title {
+            white-space: nowrap;
             font-size: 28px;
             a {
                 text-decoration: none;
