--- a/src/components/Menus/Menus.module.scss
+++ b/src/components/Menus/Menus.module.scss
@@ -3,6 +3,7 @@
 }
 .menu {
     margin-left: 40px; 
+    white-space: nowrap;
     a {
         text-decoration: none;
         color: #ddd;
